Style property input

--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -12,10 +12,16 @@
   <body>
     <main>
       <h1>Viewport-Based Rescaling</h1>
-      <label>
-        CSS Property
-        <input type="text" id="property-input" />
-      </label>
+      <div id="property-input-card" class="card">
+        <label>
+          CSS Property
+          <input
+            type="text"
+            id="property-input"
+            placeholder="Specify property"
+          />
+        </label>
+      </div>
       <section>
         <h2>Breakpoints</h2>
         <ul id="breakpoint-container"></ul>
