Rename rescaling > scaling

--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Viewport-Based Rescaling</title>
+    <title>Viewport-Based Scaling</title>
     <meta
       name="description"
       content="Here you can generate CSS code for interpolating a value between breakpoints based on the viewport width."
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main>
-      <h1>Viewport-Based Rescaling</h1>
+      <h1>Viewport-Based Scaling</h1>
       <div id="property-input-card" class="card">
         <label>
           CSS Property
