--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -38,6 +38,14 @@
         <pre><code id="output-code"></code></pre>
       </section>
     </main>
+    <footer>
+      <p>
+        Made by <a href="https://github.com/luizffgv">luizffgv</a><br /><a
+          href="https://github.com/luizffgv/viewport-based-rescaling/"
+          >View repository</a
+        >
+      </p>
+    </footer>
     <dialog id="help-dialog" autofocus>
       <button
         type="button"
