Make font sizes more consistent
This means reducing elements that had large font sizes for no reason

--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -12,7 +12,7 @@
   <body>
     <main>
       <h1>Viewport-Based Scaling</h1>
-      <div id="property-input-card" class="card">
+      <div class="card">
         <label>
           CSS Property
           <input
