Move help button to footer

--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -39,12 +39,15 @@
       </section>
     </main>
     <footer>
-      <p>
+      <p id="made-by">
         Made by <a href="https://github.com/luizffgv">luizffgv</a><br /><a
           href="https://github.com/luizffgv/viewport-based-rescaling/"
           >View repository</a
         >
       </p>
+      <button type="button" id="help-button" aria-label="Help">
+        <span class="material-symbols-outlined">question_mark</span>
+      </button>
     </footer>
     <dialog id="help-dialog" autofocus>
       <button
@@ -188,8 +191,5 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         </pre>
       </details>
     </dialog>
-    <button type="button" id="help-button" aria-label="Help">
-      <span class="material-symbols-outlined">question_mark</span>
-    </button>
   </body>
 </html>
