Add "support me" button

--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -39,6 +39,7 @@
       </section>
     </main>
     <footer>
+      <a href="https://ko-fi.com/U6U7OON7I" class="button">Support me</a>
       <p id="made-by">
         Made by <a href="https://github.com/luizffgv">luizffgv</a><br /><a
           href="https://github.com/luizffgv/viewport-based-rescaling/"
