Make help button consistent with Support me button

--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -76,9 +76,7 @@
           >View repository</a
         >
       </p>
-      <button type="button" id="help-button" aria-label="Help">
-        <span class="material-symbols-outlined">question_mark</span>
-      </button>
+      <button type="button" id="help-button">About this</button>
     </footer>
     <dialog id="help-dialog" autofocus>
       <button
