Make add breakpoint button consistent with others

--- a/src/pages/index/template.html
+++ b/src/pages/index/template.html
@@ -55,13 +55,7 @@
       <section>
         <h2>Breakpoints</h2>
         <ul id="breakpoint-container"></ul>
-        <button
-          type="button"
-          id="add-breakpoint-button"
-          aria-label="Add breakpoint"
-        >
-          <span class="material-symbols-outlined">add</span>
-        </button>
+        <button type="button" id="add-breakpoint-button">Add breakpoint</button>
       </section>
       <section>
         <h2>CSS Code</h2>
